--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -192,6 +192,9 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_U2EC)		+= u2ec
 dir_$(CONFIG_FIRMWARE_INCLUDE_DUMP1090)	+= dump1090
 endif
 
+
+dir_$(CONFIG_FIRMWARE_INCLUDE_ADBYBY)	+= adbyby
+
 ifeq ($(STORAGE_ENABLED),y)
 dir_$(CONFIG_FIRMWARE_INCLUDE_NFSD)		+= nfs-utils
 ifneq (,$(filter y,$(CONFIG_FIRMWARE_INCLUDE_NFSD) $(CONFIG_FIRMWARE_INCLUDE_NFSC)))
